deploy/k8s/test/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: timeline-board-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: 10m
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - __APP_HOST__
      secretName: am-tls
  rules:
    - host: __APP_HOST__
      http:
        paths:
          - path: __BASE_PATH__/api
            pathType: Prefix
            backend:
              service:
                name: timeline-backend-service
                port:
                  number: 80
          - path: __BASE_PATH__
            pathType: Prefix
            backend:
              service:
                name: timeline-frontend-service
                port:
                  number: 80
